...
            let completionRestart = {[weak self] in
                guard let self else { return }
                self.resetQuestionIndex()
                self.correctAnswers = 0
                self.questionFactory?.requestNextQuestion()}
            let alertResult = AlertResult(
            title: "Этот раунд окончен!",
            message: text,
            buttonRestart: "Сыграть еще раз",
            buttonReset: "Сброс статистики",
            complitionRestart: completionRestart,
            complitionReset: {
                completionRestart()
...
